--- a/assignment4/style.css
+++ b/assignment4/style.css
@@ -3,7 +3,7 @@ body
 {
 margin:0;
 padding:0;
-background:radial-gradient(#ECBD64,#FF3044);
+background:radial-gradient(#d9c129,#968a39);
 height:100vh;
 }
 
