--- a/assignment4/style.css
+++ b/assignment4/style.css
@@ -15,7 +15,11 @@ h1
     top:50%;
     left:50%;
     transform:translate(-50%,-50%);
-    font-family:"Brush Script MT";
+    .rampart-one-regular {
+  font-family: "Rampart One", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
     color:#fff;
     font-size:61px;
 }
